--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,4 +1,7 @@
 
+@import "../../libs/sass/bootstrap.min";
+@import "../../libs/sass/bootstrap_skin";
+
 @import "blocks/fonts"; 
 @import "blocks/header"; 
 @import "blocks/main";
